Add linter and formatter

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Title</title>
-    <meta name="description">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="manifest" href="/manifest.json" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <script type="module" src="./build/bundle.js"></script>
   </head>
   <body>
